--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Note Taking App</title>
-    <link rel="stylesheet" href="dist/main.css">
+    <link rel="stylesheet" href="../dist/main.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -30,6 +30,6 @@
         </div>
     </div>
 
-    <script src="js/index.js"></script>
+    <script src="../public/js/index.js"></script>
 </body>
 </html>
